@@ -36,6 +36,7 @@ version <next>:
 - IFF ANIM demuxer & decoder
 - Direct Stream Transfer (DST) decoder
 - loudnorm filter
+- MTAF demuxer and decoder
 
 version 3.0:
 - Common Encryption (CENC) MP4 encoding and decoding support
